# video-pipeline

./: .env.example  .gitignore  AGENTS.md  BUILD_SPEC.md  CLAUDE.md  DECISIONS.md  MASTER_DOCUMENTATION.md  README.md  SKILL.md  cutmachine.py  pyproject.toml  requirements.txt
config/: component-catalog.json  defaults.yaml  roman-urdu-lexicon.json  technical-glossary.json
docs/: CUTMACHINE_AGENT_BUILD_PROMPT.md  implementation-plan.md  installation-windows.md  status.md  user-guide.md
prompts/: cowork-editor.md  edit-plan-reviser.md
remotion/: README.md  package-lock.json  package.json
schemas/: asset-cache.schema.json  asset-candidates.schema.json  asset-index.schema.json  asset-manifest.schema.json  asset-pins.schema.json  asset-preferences.schema.json  asset-ranking.schema.json  asset-requests.schema.json  audio-mastering.schema.json  caption-corrections.schema.json  color-analysis.schema.json  component-catalog.schema.json  cowork-editor-request.schema.json  delivery-record.schema.json  draft-render.schema.json  edit-plan.schema.json  editor-settings.schema.json  final-pass.schema.json  learning-event.schema.json  learning-feedback.schema.json  media-info.schema.json  normalization-report.schema.json  normalized-transcript.schema.json  performance-report.schema.json  plan-revision.schema.json  planning-input.schema.json  preprocess-record.schema.json  project.schema.json  qc-report.schema.json  reframe-analysis.schema.json  remapped-transcript.schema.json  render-input.schema.json  render-report.schema.json  repetition-candidates.schema.json  state.schema.json  (+9 more)
(+80 files in other folders)
