[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutmachine"
version = "0.1.0"
description = "Local-first AI video editing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.2,<2",
  "jsonschema>=4.23,<5",
  "numpy>=1.26,<2.4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12",
  "types-jsonschema>=4.23",
]

[project.scripts]
cutmachine = "cutmachine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
